# python-katas

./: .gitconfig  .gitignore  .gitlint  .pre-commit-config.yaml  README.md  coverage.xml  motd  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  shell.nix
src/: etienne_khoa.py  etienne_khoa_2.py  etienne_khoa_3.py  etienne_khoa_32.py  etienne_khoa_4.py  pietro.py
src/bowling_game/: README.md  bowling.py  game.py
src/calculator/: calculator.py
src/coffee_machine/: coffee_machine.py  coffee_test.py  drink_maker.py  drink_order.py  foo.py  make_drink.py  order.py  solution.py  test_make_drink.py
src/data_munging/: data_common.py  data_football.py  data_weather.py
src/diamond/: __init__.py  diamond.py  diamonds.py
src/game_of_life/: game_of_life.py
src/gilded_rose/: guilded_rose.py
src/hangman/: README.md  ReadMe.md  hangman.py  test_hangman.py
src/lcd_numbers/: lcd_numbers.py
src/minesweeper/: minesweeper.py
src/molkky_game/: README.md  game.py  molkky_game.py
src/poker/: card.py  compare_hands.py  poker.py  readme.md
src/refinery_exercise/: refinery_optimization_exercise.ipynb  refinery_optimization_exercise.md
src/roman_numerals/: __init__.py  numeric_to_roman.py  roman_numerals.py  roman_to_numeric.py
src/sudoku_solver/: sudoku_solver.py
src/supermarket_receipt/: README.md  requirements.txt
src/tennis/: tennis.py
src/tennis_game/: __init__.py  game.py  main.py  match.py  readme.md  tennis.py  tennis_game.py  tennis_tdd_test.py
src/texas_holdem/: card.py  evaluation.py  (+1 more)
tests/: test_pietro.py  test_tennis.py
(+101 files in other folders)
